fix: 🐛 add column and shift 0, remove unecessary col and row

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,7 +21,7 @@ $var-breakpoints: (
 
 @function generate-list($value) {
 	$result: 0;
-	@for $i from 1 through $value {
+	@for $i from 0 through $value {
 		$result: append($result, $i);
 	}
 	@return $result
